--- a/work10/src/pages/App.css
+++ b/work10/src/pages/App.css
@@ -1,3 +1,34 @@
 .App{
-  background-color: red;
+  /* background-color: red; */
+  background-image: url('../background.jpg');
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  position: relative;
+}
+
+.container-title {
+  height: 100px;
+  width: 500px;
+  color: white;
+  border-radius: 10%;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  transform: translate(-50%, -100%);
+}
+
+.background-container {
+  background-color: rgb(206, 203, 203);
+  opacity: 0.6;
+  height: 100px;
+  width: 500px;
+  position: absolute;
+  border-radius: 10%;
+}
+
+.title {
+  position: absolute;
 }
