--- a/work10/src/pages/contacts/contacts.css
+++ b/work10/src/pages/contacts/contacts.css
@@ -1,18 +1,17 @@
 .contact-container {
     text-align: center;
-    background-color: aqua;
-    /* background-image: url('../../background.png'); */
+    /* background-color: aqua; */
+    background-image: url('../../background.jpg');
     width: 100%;
     height: 100vh;
     background-size: cover;
     position: relative;
-  }
+}
 
 .form {
     background-color: white;
-    height: 200px;
-    border-radius: 10%;
-    width: 400px;
+    height: 230px;
+    border-radius: 45px;
     display: flex;
     flex-direction: column;
     width: 500px;
@@ -28,5 +27,29 @@
 }
 
 .input-form {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+}
+.text-contacts {
+    font-size: 20px;
+}
+/* .container-for-contacts{
+background-color: grey;
+} */
+.grid-contacts {
+    display: grid;
+    grid-template-columns: 200px 200px;
+    gap: 10px;
+}
+.grid-element{
+    border-radius: 10px;
+    background-color: white;
+    font-size: 20px;
+    height: 30px;
+}
+.title{
+font-weight: 600;
+color: white;
+
+position: relative;
+/* background-color: aqua; */
 }
