--- a/work10/src/pages/footer/footer.css
+++ b/work10/src/pages/footer/footer.css
@@ -1,5 +1,6 @@
 .footer {
-    background-color: rgb(226, 147, 147);
+    background-color:black;
+    margin-block-start:0;
 }
 
 .footerContainer {
@@ -7,5 +8,7 @@
     justify-content: space-between;
     margin-left: 10px;
     margin-right: 10px;
-
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
 }
