--- a/work10/src/pages/photo/photo.css
+++ b/work10/src/pages/photo/photo.css
@@ -1,3 +1,8 @@
 .container-photo {
-    background-color: yellow;
+        text-align: center;
+        background-image: url('../../background.jpg');
+        width: 100%;
+        height: 100vh;
+        background-size: cover;
+        position: relative;
 }
