--- a/work10/src/pages/plus/plus.css
+++ b/work10/src/pages/plus/plus.css
@@ -1,3 +1,8 @@
-.container-plus{
-    background-color: green;
+.container-plus {
+    text-align: center;
+    background-image: url('../../background.jpg');
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    position: relative;
 }
