redact contacts,app,plus pages

--- a/work10/src/pages/App.css
+++ b/work10/src/pages/App.css
@@ -1,4 +1,4 @@
-.App{
+.App {
   /* background-color: red; */
   background-image: url('../background.jpg');
   width: 100%;
@@ -7,28 +7,49 @@
   position: relative;
 }
 
-.container-title {
-  height: 100px;
-  width: 500px;
-  color: white;
-  border-radius: 10%;
+
+.title-container {
+  text-align: center;
+  padding: 30px 20px;
+}
+
+.title-container .title {
+  font-size: 40px;
+  font-weight: bold;
+  line-height: 50px;
+  color: #FFF;
+  font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
+  animation: 2s neon-2 alternate-reverse infinite;
+}
+
+@keyframes neon-2 {
+  from {
+    text-shadow: 0 0 5px #FFF,
+      0 0 10px #FFF,
+      0 0 15px #FFF,
+      0 0 20px #BFE2FF;
+  }
+
+  to {
+    text-shadow: 0 0 20px #BFE2FF,
+      0 0 35px #BFE2FF,
+      0 0 40px #BFE2FF,
+      0 0 50px #BFE2FF,
+      0 0 800px #BFE2FF;
+  }
+}
+
+.text-abou-me {
+  text-align: center;
+  width: 600px;
+  background: rgba(0, 0, 0, 0.9);
+  border-radius: 60px;
+  color: #FFF;
+  padding: 10px;
+font-weight: 700;
+}
+.content {
   display: flex;
-  align-items: center;
-  position: absolute;
-  top: 40%;
-  left: 40%;
-  transform: translate(-50%, -100%);
-}
-
-.background-container {
-  background-color: rgb(206, 203, 203);
-  opacity: 0.6;
-  height: 100px;
-  width: 500px;
-  position: absolute;
-  border-radius: 10%;
-}
-
-.title {
-  position: absolute;
+  justify-content: center;
 }
