--- a/work10/src/pages/contacts/contacts.css
+++ b/work10/src/pages/contacts/contacts.css
@@ -1,25 +1,25 @@
 .contact-container {
     text-align: center;
-    /* background-color: aqua; */
     background-image: url('../../background.jpg');
     width: 100%;
     height: 100vh;
     background-size: cover;
-    position: relative;
+    /* position: relative; */
 }
 
 .form {
     background-color: white;
-    height: 230px;
+    height: 250px;
     border-radius: 45px;
     display: flex;
     flex-direction: column;
     width: 500px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -100%);
-    padding: 50px;
+    padding: 40px;
+    padding-top: 10px;
+    padding-bottom: 50px;
+    display: flex;
+    justify-content: center;
+
 }
 
 .button-form {
@@ -27,29 +27,34 @@
 }
 
 .input-form {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
+
 .text-contacts {
     font-size: 20px;
 }
-/* .container-for-contacts{
-background-color: grey;
-} */
+
 .grid-contacts {
     display: grid;
     grid-template-columns: 200px 200px;
-    gap: 10px;
+    gap: 5px;
+    margin-top: 20px;
 }
-.grid-element{
+
+.grid-element {
     border-radius: 10px;
     background-color: white;
     font-size: 20px;
     height: 30px;
 }
-.title{
-font-weight: 600;
-color: white;
 
-position: relative;
-/* background-color: aqua; */
+.title {
+    font-weight: 600;
+    color: white;
+    position: relative;
+}
+
+.container-for-contacts {
+    display: flex;
+    justify-content: center;
 }
