--- a/work10/src/pages/App.css
+++ b/work10/src/pages/App.css
@@ -42,12 +42,13 @@
 
 .text-abou-me {
   text-align: center;
-  width: 600px;
+  width: 400px;
   background: rgba(0, 0, 0, 0.9);
   border-radius: 60px;
   color: #FFF;
   padding: 10px;
 font-weight: 700;
+font-size: 20px;
 }
 .content {
   display: flex;
