--- a/work10/src/pages/photo/photo.css
+++ b/work10/src/pages/photo/photo.css
@@ -2,7 +2,58 @@
         text-align: center;
         background-image: url('../../background.jpg');
         width: 100%;
-        height: 100vh;
+        height: 94vh;
         background-size: cover;
         position: relative;
 }
+
+.gallery {
+        font-size: 30px;
+        color: aquamarine;
+}
+
+.gallery-container {
+        background: rgba(0, 0, 0, 0.4);
+        width: 230px;
+        border-radius: 20px;
+}
+
+.foto-box {
+        display: flex;
+        justify-content: center;
+        padding: 20px;
+}
+
+.foto {
+        transition: 2s;
+        width: 150px;
+        height: 150px;
+        margin-right: 10px;
+}
+
+.foto1:hover {
+        width: 300px;
+        height: 600px;
+}
+
+.foto2:hover {
+        width: 600px;
+        height: 350px;
+}
+
+.foto3:hover {
+        width: 600px;
+        height: 350px;
+}
+
+.foto4:hover {
+        width: 350px;
+        height: 500px;
+}
+
+/* .main-foto {
+        width: 300px;
+        height: 200px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+} */
