--- a/work10/src/pages/contacts/contacts.css
+++ b/work10/src/pages/contacts/contacts.css
@@ -2,9 +2,9 @@
     text-align: center;
     background-image: url('../../background.jpg');
     width: 100%;
-    height: 94vh;
+    height: 84.5vh;
     background-size: cover;
-    /* position: relative; */
+    margin-block-start: 0px;
 }
 
 .form {
@@ -32,6 +32,7 @@
 
 .text-contacts {
     font-size: 20px;
+    font-weight: 600;
 }
 
 .grid-contacts {
@@ -50,11 +51,20 @@
 
 .title {
     font-weight: 600;
-    color: white;
+    color: aquamarine;
     position: relative;
+    margin-block-start: 0px;
 }
 
 .container-for-contacts {
     display: flex;
     justify-content: center;
+}
+
+.background-title {
+    background: rgba(0, 0, 0, 0.3);
+    width: 165px;
+    border-radius: 20px;
+    margin-block-start: 0px;
+
 }
