--- a/work10/src/pages/App.css
+++ b/work10/src/pages/App.css
@@ -1,7 +1,7 @@
 .App {
   background-image: url('../background.jpg');
   width: 100%;
-  height: 94vh;
+  height: 84.5vh;
   background-size: cover;
   position: relative;
 }
@@ -11,7 +11,7 @@
   width: 400px;
   background: rgba(0, 0, 0, 0.9);
   border-radius: 60px;
-  color: #FFF;
+  color: aquamarine;
   padding: 10px;
   font-weight: 700;
   font-size: 20px;
