--- a/work10/src/pages/photo/photo.css
+++ b/work10/src/pages/photo/photo.css
@@ -2,20 +2,23 @@
         text-align: center;
         background-image: url('../../background.jpg');
         width: 100%;
-        height: 94vh;
+        height: 84.5vh;
         background-size: cover;
         position: relative;
+        margin-block-start: 0px;
 }
 
 .gallery {
         font-size: 30px;
         color: aquamarine;
+        margin-block-start: 0px;
 }
 
 .gallery-container {
-        background: rgba(0, 0, 0, 0.4);
+        background: rgba(0, 0, 0, 0.3);
         width: 230px;
         border-radius: 20px;
+        margin-block-start: 0px;
 }
 
 .foto-box {
@@ -32,8 +35,8 @@
 }
 
 .foto1:hover {
-        width: 300px;
-        height: 600px;
+        width: 270px;
+        height: 550px;
 }
 
 .foto2:hover {
@@ -51,9 +54,7 @@
         height: 500px;
 }
 
-/* .main-foto {
-        width: 300px;
-        height: 200px;
-        margin-bottom: 20px;
-        margin-top: 20px;
-} */
+.foto5:hover {
+        width: 600px;
+        height: 350px;
+}
