--- a/work10/src/pages/header/header.css
+++ b/work10/src/pages/header/header.css
@@ -21,3 +21,12 @@
     color: white;
     text-decoration: none;
 }
+
+@media screen and (max-width: 700px) {
+    .button {
+        margin: 7px;
+        font-size: 18px;
+        font-weight: 700;
+        border-radius: 10px;
+    }
+}
