--- a/work10/src/pages/plus/plus.css
+++ b/work10/src/pages/plus/plus.css
@@ -175,3 +175,10 @@
         transform: scale(1);
     }
 }
+
+@media screen and (max-width: 700px) {
+    .dsongentom {
+        font-weight: 800;
+        font-size: 25px;
+    }
+}
