--- a/work10/src/pages/portfolio/portfolio.css
+++ b/work10/src/pages/portfolio/portfolio.css
@@ -30,3 +30,11 @@
     justify-content: space-around;
     flex-wrap: wrap;
 }
+
+@media screen and (max-width: 700px) {
+    .content-container {
+        margin-top: 1%;
+        font-size: 17px;
+        padding: 2px;
+    }
+}
